[package]
name = "canister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "../macros" }
proc_macros = { path = "../proc_macros" }
candid = "0.10.8"
itertools = "0.13.0"
serde = "1.0"
