[package]
name = "tla_instrumentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "^0.10.2"
itertools = "0.13.0"
serde = "1.0"
tla_instrumentation_proc_macros = { path = "../tla_instrumentation_proc_macros" }

[dev-dependencies]
tokio-test = "0.4.4"
